hotfix: erro no hrefs

--- a/cardapio/templates/cardapio/ver_cardapio.html
+++ b/cardapio/templates/cardapio/ver_cardapio.html
@@ -21,6 +21,6 @@
         {% endfor %}
     </ul>
 
-    <a href="{% url 'ver_cardapio_semana' cardapio.restaurante.id %}">Ver Cardápio da Semana</a>
+    <a href="{% url 'ver_cardapio_semana' restaurante_id %}">Ver Cardápio da Semana</a>
 </body>
 </html>
